kuber/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - match:
        - uri:
            exact: "/log"
      route:
        - destination:
            host: app-service
            port:
              number: 8080
      fault:
        delay:
          fixedDelay: 2s
          percentage:
            value: 100
      timeout: 1s
      retries:
        attempts: 2
        perTryTimeout: 1s
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: app-service
            port:
              number: 8080
    - route:
        - destination:
            host: app-service
            port:
              number: 8080
      fault:
        abort:
          httpStatus: 404
          percentage:
            value: 100
...
